--- a/deploy/crds/eventing_v1alpha1_install_crd.yaml
+++ b/deploy/crds/eventing_v1alpha1_install_crd.yaml
@@ -9,6 +9,8 @@ spec:
     listKind: InstallList
     plural: installs
     singular: install
+    shortNames:
+    - kei
   scope: Namespaced
   subresources:
     status: {}
