--- a/deploy/resources/knative-eventing-0.4.1.yaml
+++ b/deploy/resources/knative-eventing-0.4.1.yaml
@@ -176,7 +176,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/knative-releases/github.com/knative/eventing/cmd/controller@sha256:b034db67e6445939a332f0f9d2ed5f38cb4c1dad06df107966e9773ab2be8ecd
+        image: quay.io/openshift-knative/knative-eventing-controller:v0.4.1
         name: eventing-controller
         terminationMessagePolicy: FallbackToLogsOnError
         volumeMounts:
@@ -214,7 +214,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/knative-releases/github.com/knative/eventing/cmd/webhook@sha256:8fdc31ac419615d268bee4517ca61cf2680b986c0d7cdf746ae99312618a9837
+        image: quay.io/openshift-knative/knative-eventing-webhook:v0.4.1
         name: webhook
         terminationMessagePolicy: FallbackToLogsOnError
         volumeMounts:
@@ -388,7 +388,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/knative-releases/github.com/knative/eventing/pkg/provisioners/inmemory/controller@sha256:5c15035b1cd7b731ffc935418f3b9cc19013865dbad7e9773c178703365f9970
+        image: quay.io/openshift-knative/knative-eventing-in-memory-channel-controller:v0.4.1
         name: controller
       serviceAccountName: in-memory-channel-controller
 ---
@@ -455,7 +455,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/knative-releases/github.com/knative/eventing/cmd/fanoutsidecar@sha256:d3444f6de28779fe9b4e626a428e0f3b9c13d13127d34c5e66e80a61a412e49b
+        image: quay.io/openshift-knative/knative-eventing-fanoutsidecar:v0.4.1
         name: dispatcher
       serviceAccountName: in-memory-channel-dispatcher
 
