--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: knative-eventing-operator
           # Replace this with the built image name
-          image: REPLACE_IMAGE
+          image: quay.io/openshift-knative/knative-eventing-operator:v0.4.1
           command:
           - knative-eventing-operator
           imagePullPolicy: Always
