--- a/deploy/resources/knative-eventing-sources-v0.5.0.yaml
+++ b/deploy/resources/knative-eventing-sources-v0.5.0.yaml
@@ -1,15 +1,14 @@
+---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: knative-sources
-
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: controller-manager
   namespace: knative-sources
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -24,7 +23,7 @@ rules:
   - cronjobsources
   - githubsources
   - kuberneteseventsources
-  verbs:
+  verbs: &everything
   - get
   - list
   - watch
@@ -32,6 +31,15 @@ rules:
   - update
   - patch
   - delete
+- apiGroups:
+  - sources.eventing.knative.dev
+  resources:
+  - awssqssources/finalizers
+  - containersources/finalizers
+  - cronjobsources/finalizers
+  - githubsources/finalizers
+  - kuberneteseventsources/finalizers
+  verbs: *everything
 - apiGroups:
   - sources.eventing.knative.dev
   resources:
@@ -48,19 +56,13 @@ rules:
   - apps
   resources:
   - deployments
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
+  verbs: *everything
 - apiGroups:
   - eventing.knative.dev
   resources:
   - channels
-  verbs:
+  - brokers
+  verbs: &readOnly
   - get
   - list
   - watch
@@ -68,55 +70,37 @@ rules:
   - serving.knative.dev
   resources:
   - services
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
+  verbs: *everything
 - apiGroups:
   - ""
   resources:
   - secrets
-  verbs:
-  - get
-  - list
-  - watch
+  verbs: *readOnly
 - apiGroups:
   - ""
   resources:
   - events
-  verbs:
-  - get
-  - list
-  - watch
-  - create
-  - update
-  - patch
-  - delete
-
+  verbs: *everything
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: eventing-sources-controller
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: eventing-sources-controller
 subjects:
 - kind: ServiceAccount
   name: controller-manager
   namespace: knative-sources
-
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: eventing-sources-controller
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
     eventing.knative.dev/source: "true"
+    knative.dev/crd-install: "true"
   name: awssqssources.sources.eventing.knative.dev
 spec:
   group: sources.eventing.knative.dev
@@ -179,13 +163,13 @@ spec:
               type: string
           type: object
   version: v1alpha1
-
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
     eventing.knative.dev/source: "true"
+    knative.dev/crd-install: "true"
   name: containersources.sources.eventing.knative.dev
 spec:
   group: sources.eventing.knative.dev
@@ -253,13 +237,13 @@ spec:
               type: string
           type: object
   version: v1alpha1
-
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
     eventing.knative.dev/source: "true"
+    knative.dev/crd-install: "true"
   name: cronjobsources.sources.eventing.knative.dev
 spec:
   group: sources.eventing.knative.dev
@@ -322,13 +306,13 @@ spec:
               type: string
           type: object
   version: v1alpha1
-
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
     eventing.knative.dev/source: "true"
+    knative.dev/crd-install: "true"
   name: githubsources.sources.eventing.knative.dev
 spec:
   group: sources.eventing.knative.dev
@@ -444,13 +428,13 @@ spec:
               type: string
           type: object
   version: v1alpha1
-
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   labels:
     eventing.knative.dev/source: "true"
+    knative.dev/crd-install: "true"
   name: kuberneteseventsources.sources.eventing.knative.dev
 spec:
   group: sources.eventing.knative.dev
@@ -511,49 +495,47 @@ spec:
               type: string
           type: object
   version: v1alpha1
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    control-plane: controller-manager
   name: controller
   namespace: knative-sources
+  labels:
+    control-plane: controller-manager
 spec:
-  ports:
-  - port: 443
   selector:
     control-plane: controller-manager
-
+  ports:
+  - port: 443
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  labels:
-    control-plane: controller-manager
   name: controller-manager
   namespace: knative-sources
+  labels:
+    control-plane: controller-manager
 spec:
   selector:
-    matchLabels:
+    matchLabels: &labels
       control-plane: controller-manager
   serviceName: controller-manager
   template:
     metadata:
-      labels:
-        control-plane: controller-manager
+      labels: *labels
     spec:
+      serviceAccountName: controller-manager
       containers:
-      - env:
-        - name: K8S_RA_IMAGE
-          value: quay.io/openshift-knative/knative-eventing-sources-kuberneteseventsource:v0.4.1
-        - name: GH_RA_IMAGE
-          value: quay.io/openshift-knative/knative-eventing-sources-github-receive-adapter:v0.4.1
-        - name: CRONJOB_RA_IMAGE
-          value: quay.io/openshift-knative/knative-eventing-sources-cronjob-receive-adapter:v0.4.1
-        image: quay.io/openshift-knative/knative-eventing-sources-manager:v0.4.1
+      - image: quay.io/openshift-knative/knative-eventing-sources-manager:v0.5.0
         name: manager
+        env:
+        - name: K8S_RA_IMAGE
+          value: quay.io/openshift-knative/knative-eventing-sources-kuberneteseventsource:v0.5.0
+        - name: GH_RA_IMAGE
+          value: quay.io/openshift-knative/knative-eventing-sources-github-receive-adapter:v0.5.0
+        - name: CRONJOB_RA_IMAGE
+          value: quay.io/openshift-knative/knative-eventing-sources-cronjob-receive-adapter:v0.5.0
         resources:
           limits:
             cpu: 100m
@@ -561,7 +543,423 @@ spec:
           requests:
             cpu: 100m
             memory: 20Mi
-      serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
-
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: knative-sources
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: camel-controller-manager
+  namespace: knative-sources
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: camel-controller
+rules:
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - sources.eventing.knative.dev
+  resources:
+  - camelsources
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - sources.eventing.knative.dev
+  resources:
+  - camelsources/status
+  - camelsources/finalizers
+  verbs:
+  - get
+  - update
+  - patch
+- apiGroups:
+  - serving.knative.dev
+  resources:
+  - services
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - eventing.knative.dev
+  resources:
+  - channels
+  - brokers
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - camel.apache.org
+  resources:
+  - '*'
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: camel-controller-rolebinding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: camel-controller
+subjects:
+- kind: ServiceAccount
+  name: camel-controller-manager
+  namespace: knative-sources
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  creationTimestamp: null
+  labels:
+    eventing.knative.dev/source: "true"
+    knative.dev/crd-install: "true"
+  name: camelsources.sources.eventing.knative.dev
+spec:
+  group: sources.eventing.knative.dev
+  names:
+    categories:
+    - all
+    - knative
+    - eventing
+    - sources
+    kind: CamelSource
+    plural: camelsources
+  scope: Namespaced
+  subresources:
+    status: {}
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          type: string
+        kind:
+          type: string
+        metadata:
+          type: object
+        spec:
+          properties:
+            image:
+              type: string
+            serviceAccountName:
+              type: string
+            sink:
+              type: object
+            source:
+              properties:
+                component:
+                  properties:
+                    properties:
+                      type: object
+                    uri:
+                      minLength: 1
+                      type: string
+                  type: object
+              type: object
+          required:
+          - source
+          type: object
+        status:
+          properties:
+            conditions:
+              items:
+                properties:
+                  lastTransitionTime:
+                    type: string
+                  message:
+                    type: string
+                  reason:
+                    type: string
+                  severity:
+                    type: string
+                  status:
+                    type: string
+                  type:
+                    type: string
+                required:
+                - type
+                - status
+                type: object
+              type: array
+            sinkUri:
+              type: string
+          type: object
+  version: v1alpha1
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    control-plane: camel-controller-manager
+  name: camel-controller-manager
+  namespace: knative-sources
+spec:
+  selector:
+    control-plane: camel-controller-manager
+  ports:
+  - port: 443
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  labels:
+    control-plane: camel-controller-manager
+  name: camel-controller-manager
+  namespace: knative-sources
+spec:
+  selector:
+    matchLabels:
+      control-plane: camel-controller-manager
+  serviceName: camel-controller-manager
+  template:
+    metadata:
+      labels:
+        control-plane: camel-controller-manager
+    spec:
+      containers:
+      - image: quay.io/openshift-knative/knative-eventing-sources-camel-source-controller:v0.5.0
+        name: manager
+        resources:
+          limits:
+            cpu: 100m
+            memory: 30Mi
+          requests:
+            cpu: 20m
+            memory: 20Mi
+      serviceAccount: camel-controller-manager
+      terminationGracePeriodSeconds: 10
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: kafka-controller-manager
+  namespace: knative-sources
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: eventing-sources-kafka-controller
+rules:
+- apiGroups:
+  - sources.eventing.knative.dev
+  resources:
+  - kafkasources
+  - kafkasources/finalizers
+  - services
+  verbs: &everything
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
+- apiGroups:
+  - sources.eventing.knative.dev
+  resources:
+  - kafkasources/status
+  - services
+  verbs:
+  - get
+  - update
+  - patch
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs: *everything
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  - services
+  - endpoints
+  - persistentvolumeclaims
+  - events
+  - configmaps
+  - secrets
+  verbs: *everything
+- apiGroups:
+  - eventing.knative.dev
+  resources:
+  - channels
+  - services
+  verbs: *everything
+- apiGroups:
+  - serving.knative.dev
+  resources:
+  - services
+  - routes
+  verbs: *everything
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: eventing-sources-kafka-controller
+subjects:
+- kind: ServiceAccount
+  name: kafka-controller-manager
+  namespace: knative-sources
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: eventing-sources-kafka-controller
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  labels:
+    eventing.knative.dev/source: "true"
+    knative.dev/crd-install: "true"
+  name: kafkasources.sources.eventing.knative.dev
+spec:
+  group: sources.eventing.knative.dev
+  names:
+    categories:
+    - all
+    - knative
+    - eventing
+    - sources
+    kind: KafkaSource
+    plural: kafkasources
+  scope: Namespaced
+  subresources:
+    status: {}
+  validation:
+    openAPIV3Schema:
+      properties:
+        apiVersion:
+          type: string
+        kind:
+          type: string
+        metadata:
+          type: object
+        spec:
+          properties:
+            bootstrapServers:
+              type: string
+            topics:
+              type: string
+            consumerGroup:
+              type: string
+            serviceAccountName:
+              type: string
+            sink:
+              type: object
+          type: object
+        status:
+          properties:
+            conditions:
+              items:
+                properties:
+                  lastTransitionTime:
+                    type: string
+                  message:
+                    type: string
+                  reason:
+                    type: string
+                  severity:
+                    type: string
+                  status:
+                    type: string
+                  type:
+                    type: string
+                required:
+                - type
+                - status
+                type: object
+              type: array
+            sinkUri:
+              type: string
+          type: object
+  version: v1alpha1
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-controller
+  namespace: knative-sources
+  labels:
+    control-plane: kafka-controller-manager
+spec:
+  selector:
+    control-plane: kafka-controller-manager
+  ports:
+  - port: 443
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: kafka-controller-manager
+  namespace: knative-sources
+  labels:
+    control-plane: kafka-controller-manager
+spec:
+  selector:
+    matchLabels: &labels
+      control-plane: kafka-controller-manager
+  serviceName: kafka-controller-manager
+  template:
+    metadata:
+      labels: *labels
+    spec:
+      serviceAccountName: kafka-controller-manager
+      containers:
+      - name: manager
+        image: quay.io/openshift-knative/knative-eventing-sources-kafka-source-controller:v0.5.0
+        imagePullPolicy: Always
+        env:
+        - name: KAFKA_RA_IMAGE
+          value: quay.io/openshift-knative/knative-eventing-sources-kafka-source-adapter:v0.5.0
+        volumeMounts:
+        resources:
+          limits:
+            cpu: 100m
+            memory: 30Mi
+          requests:
+            cpu: 20m
+            memory: 20Mi
+      serviceAccount: kafka-controller-manager
+      terminationGracePeriodSeconds: 10
