re-generate tehe CSV

--- a/deploy/olm-catalog/knative-eventing-operator/0.5.0/knative-eventing-operator.v0.5.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.5.0/knative-eventing-operator.v0.5.0.clusterserviceversion.yaml
@@ -239,6 +239,22 @@ spec:
         - apiGroups:
           - sources.eventing.knative.dev
           resources:
+          - awssqssources/finalizers
+          - containersources/finalizers
+          - cronjobsources/finalizers
+          - githubsources/finalizers
+          - kuberneteseventsources/finalizers
+          verbs:
+          - get
+          - list
+          - watch
+          - create
+          - update
+          - patch
+          - delete
+        - apiGroups:
+          - sources.eventing.knative.dev
+          resources:
           - awssqssources/status
           - containersources/status
           - cronjobsources/status
@@ -597,7 +613,6 @@ spec:
     type: MultiNamespace
   - supported: true
     type: AllNamespaces
-  maturity: alpha
   keywords:
   - serverless
   - eventing
@@ -606,6 +621,7 @@ spec:
   maintainers:
   - email: mwessend@redhat.com
     name: Matthias Wessendorf
+  maturity: alpha
   provider:
     name: Knative Community
   replaces: knative-eventing.v0.4.1
