--- a/deploy/resources/knative-eventing-v0.5.0.yaml
+++ b/deploy/resources/knative-eventing-v0.5.0.yaml
@@ -75,14 +75,14 @@ metadata:
   name: eventing-broker-filter
 rules:
   - apiGroups:
-      - eventing.knative.dev
+      - "eventing.knative.dev"
     resources:
-      - triggers
-      - triggers/status
+      - "triggers"
+      - "triggers/status"
     verbs:
-      - get
-      - list
-      - watch
+      - "get"
+      - "list"
+      - "watch"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
