meta wip: less OLM work...

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -58,450 +58,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: knative-eventing-operator
-
 rules:
-
-  #######################
-  ### EVENTING - CORE
-  #######################
-
-  ## from 200-broker-clusterrole.yaml:
-  - apiGroups:
-      - eventing.knative.dev
-    resources:
-      - triggers
-      - triggers/status
-    verbs:
-      - get
-      - list
-      - watch
-
-  ## from 200-controller-clusterrole.yaml:
-  - apiGroups:
-      - ""
-    resources:
-      - "namespaces"
-      - "secrets"
-      - "configmaps"
-      - "services"
-      - "events"
-      - "serviceaccounts"
-    verbs:
-      - "get"
-      - "list"
-      - "create"
-      - "update"
-      - "delete"
-      - "patch"
-      - "watch"
-
-  # Channels and Triggers both manipulate VirtualServices.
-  - apiGroups:
-      - "networking.istio.io"
-    resources:
-      - "virtualservices"
-    verbs:
-      - "get"
-      - "list"
-      - "create"
-      - "update"
-      - "delete"
-      - "patch"
-      - "watch"
-
-  # Brokers and the namespace annotation controllers manipulate Deployments.
-  - apiGroups:
-      - "apps"
-    resources:
-      - "deployments"
-    verbs:
-      - "get"
-      - "list"
-      - "create"
-      - "update"
-      - "delete"
-      - "patch"
-      - "watch"
-
-  # The namespace annotation controller needs to manipulate RoleBindings.
-  - apiGroups:
-      - "rbac.authorization.k8s.io"
-    resources:
-      - "rolebindings"
-    verbs:
-      - "get"
-      - "list"
-      - "create"
-      - "update"
-      - "delete"
-      - "patch"
-      - "watch"
-
-  # Our own resources and statuses we care about.
-  - apiGroups:
-      - "eventing.knative.dev"
-    resources:
-      - "brokers"
-      - "brokers/status"
-      - "channels"
-      - "channels/status"
-      - "clusterchannelprovisioners"
-      - "clusterchannelprovisioners/status"
-      - "subscriptions"
-      - "subscriptions/status"
-      - "triggers"
-      - "triggers/status"
-    verbs:
-      - "get"
-      - "list"
-      - "create"
-      - "update"
-      - "delete"
-      - "patch"
-      - "watch"
-
-  ## from 200-webhook-clusterrole.yaml:
-  - apiGroups:
-      - ""
-    resources:
-      - "configmaps"
-    verbs:
-      - "get"
-      - "list"
-      - "watch"
-
-  # For manipulating certs into secrets.
-  - apiGroups:
-      - ""
-    resources:
-      - "secrets"
-    verbs:
-      - "get"
-      - "create"
-
-  # For getting our Deployment so we can decorate with ownerref.
-  - apiGroups:
-      - "apps"
-    resources:
-      - "deployments"
-      - "deployments/finalizers"
-    verbs:
-      - "get"
-      - "list"
-      - "create"
-      - "update"
-      - "delete"
-      - "patch"
-      - "watch"
-
-  # For actually registering our webhook.
-  - apiGroups:
-      - "admissionregistration.k8s.io"
-    resources:
-      - "mutatingwebhookconfigurations"
-    verbs:
-      - "get"
-      - "list"
-      - "create"
-      - "update"
-      - "delete"
-      - "patch"
-      - "watch"
-
-  # Our own resources and statuses we care about.
-  - apiGroups:
-      - "eventing.knative.dev"
-    resources:
-      - "brokers"
-      - "brokers/status"
-      - "channels"
-      - "channels/status"
-      - "clusterchannelprovisioners"
-      - "clusterchannelprovisioners/status"
-      - "subscriptions"
-      - "subscriptions/status"
-      - "triggers"
-      - "triggers/status"
-    verbs:
-      - "get"
-      - "list"
-      - "watch"
-
-  #######################
-  ### EVENTING - SOURCES
-  #######################
-
-  ## from 201-clusterrole.yaml
-
-  - apiGroups:
-      - sources.eventing.knative.dev
-    resources:
-      - awssqssources
-      - containersources
-      - cronjobsources
-      - githubsources
-      - kuberneteseventsources
-    verbs: &everything
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-
-# Sources finalizer
-  - apiGroups:
-      - sources.eventing.knative.dev
-    resources:
-      - awssqssources/finalizers
-      - containersources/finalizers
-      - cronjobsources/finalizers
-      - githubsources/finalizers
-      - kuberneteseventsources/finalizers
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-
-  # Source statuses update
-  - apiGroups:
-      - sources.eventing.knative.dev
-    resources:
-      - awssqssources/status
-      - containersources/status
-      - cronjobsources/status
-      - githubsources/status
-      - kuberneteseventsources/status
-    verbs:
-      - get
-      - update
-      - patch
-
-  # Deployments admin
-  - apiGroups:
-      - apps
-    resources:
-      - deployments
-    verbs: *everything
-
-  # Channels and Brokers read
-  - apiGroups:
-      - eventing.knative.dev
-    resources:
-      - channels
-      - brokers
-    verbs: &readOnly
-      - get
-      - list
-      - watch
-
-  # Knative Services admin
-  - apiGroups:
-      - serving.knative.dev
-    resources:
-      - services
-    verbs: *everything
-
-  # Secrets read
-  - apiGroups:
-      - ""
-    resources:
-      - secrets
-    verbs: *readOnly
-
-  # Events admin
-  - apiGroups:
-      - ""
-    resources:
-      - events
-    verbs: *everything
-
-
-  ## from kafka/201-clusterrrole.yaml
-  - apiGroups:
-      - sources.eventing.knative.dev
-    resources:
-      - kafkasources
-      - kafkasources/finalizers
-      - services
-    verbs: &everything
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-
-  - apiGroups:
-      - sources.eventing.knative.dev
-    resources:
-      - kafkasources/status
-      - services
-    verbs:
-      - get
-      - update
-      - patch
-
-  - apiGroups:
-      - apps
-    resources:
-      - deployments
-    verbs: *everything
-
-  - apiGroups:
-      - ""
-    resources:
-      - pods
-      - services
-      - endpoints
-      - persistentvolumeclaims
-      - events
-      - configmaps
-      - secrets
-    verbs: *everything
-
-  - apiGroups:
-      - eventing.knative.dev
-    resources:
-      - channels
-      - services
-    verbs: *everything
-
-  - apiGroups:
-      - serving.knative.dev
-    resources:
-      - services
-      - routes
-    verbs: *everything
-
-  ## from camel/201-clusterrrole.yaml
-  - apiGroups:
-      - apps
-    resources:
-      - deployments
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-  - apiGroups:
-      - ""
-    resources:
-      - events
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-  - apiGroups:
-      - sources.eventing.knative.dev
-    resources:
-      - camelsources
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-  - apiGroups:
-      - sources.eventing.knative.dev
-    resources:
-      - camelsources/status
-      - camelsources/finalizers
-    verbs:
-      - get
-      - update
-      - patch
-  - apiGroups:
-      - serving.knative.dev
-    resources:
-      - services
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - eventing.knative.dev
-    resources:
-      - channels
-      - brokers
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - camel.apache.org
-    resources:
-      - '*'
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-
-  #######################
-  ### OPENSHIFT SPECIFICS
-  #######################
-
-  - apiGroups:
-      - security.openshift.io
-    resources:
-      - securitycontextconstraints
-    verbs:
-      - use
-    resourceNames:
-      - privileged
-      - anyuid
-  - apiGroups:
-      - extensions
-    resources:
-      - deployments/finalizers
-    verbs:
-      - update
-  - apiGroups:
-      - build.knative.dev
-    resources:
-      - '*/finalizers'
-    verbs:
-      - update
-  - apiGroups:
-      - policy
-    resources:
-      - podsecuritypolicies
-    verbs:
-      - create
-      - update
-      - patch
-      - get
-  - apiGroups:
-      - build.knative.dev
-    resources:
-      - '*'
-    verbs:
-      - '*'
-  - apiGroups:
-      - apps
-    resources:
-      - deployments
-    verbs:
-      - get
-      - create
-      - update
-      - delete
+  - apiGroups: ["*"]
+    resources: ["*"]
+    verbs: ["*"]
