--- a/deploy/olm-catalog/knative-eventing-operator/0.5.0/knative-eventing-operator.v0.5.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.5.0/knative-eventing-operator.v0.5.0.clusterserviceversion.yaml
@@ -121,6 +121,16 @@ spec:
     type: MultiNamespace
   - supported: true
     type: AllNamespaces
+  keywords:
+  - serverless
+  - eventing
+  - camel
+  - kafka
+  maintainers:
+  - email: mwessend@redhat.com
+    name: Matthias Wessendorf
   maturity: alpha
-  provider: {}
+  provider:
+    name: Knative Community
+  replaces: knative-eventing.v0.4.1
   version: 0.5.0
