--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -69,6 +69,7 @@ required = [
 [prune]
   go-tests = true
   non-go = true
+  unused-packages = true
 
   [[prune.project]]
     name = "k8s.io/code-generator"
@@ -77,3 +78,7 @@ required = [
   [[prune.project]]
     name = "k8s.io/gengo"
     non-go = false
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/openshift/cluster-network-operator"
