--- a/deploy/crds/eventing_v1alpha1_install_cr.yaml
+++ b/deploy/crds/eventing_v1alpha1_install_cr.yaml
@@ -1,7 +1,5 @@
 apiVersion: eventing.knative.dev/v1alpha1
 kind: Install
 metadata:
-  name: example-install
-spec:
-  # Add fields here
-  size: 3
+  name: knative-eventing
+spec: {}
