--- a/deploy/olm-catalog/knative-eventing-operator/0.5.0/knative-eventing-operator.v0.5.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.5.0/knative-eventing-operator.v0.5.0.clusterserviceversion.yaml
@@ -2,6 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: ClusterServiceVersion
 metadata:
   annotations:
+    alm-examples: '[{"apiVersion":"eventing.knative.dev/v1alpha1","kind":"Install","metadata":{"name":"knative-eventing"},"spec":{}}]'
     capabilities: Basic Install
   name: knative-eventing-operator.v0.5.0
   namespace: placeholder
