Minor for consistency
Account for different remote names when tagging and make the
"Developer Catalog" look a little more sensible

--- a/deploy/olm-catalog/knative-eventing-operator/0.5.0/knative-eventing-operator.v0.5.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.5.0/knative-eventing-operator.v0.5.0.clusterserviceversion.yaml
@@ -10,8 +10,8 @@ spec:
   apiservicedefinitions: {}
   customresourcedefinitions:
     owned:
-    - description: Knative Eventing Installation
-      displayName: Install Operator
+    - description: Represents an installation of a particular version of Knative Eventing
+      displayName: Knative Eventing
       kind: Install
       name: installs.eventing.knative.dev
       version: v1alpha1
