Bring eventing inline with serving operator
This results in a few things:
- resources are always installed in the same namespace as Install
- status.resources has been replaced with status.conditions
- the eventing operator depends on the serving operator

This pulls in a knative dep for the conditions, and the lifecycle file
is identical to that of serving, so there's probably a refactoring
opportunity there.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -82,3 +82,7 @@ required = [
 [[constraint]]
   branch = "master"
   name = "github.com/openshift/cluster-network-operator"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/knative/pkg"
