--- a/deploy/crds/eventing_v1alpha1_install_crd.yaml
+++ b/deploy/crds/eventing_v1alpha1_install_crd.yaml
@@ -30,24 +30,46 @@ spec:
         metadata:
           type: object
         spec:
-          properties:
-            namespace:
-              description: The target namespace in which to install the upstream resources
-              type: string
           type: object
         status:
           properties:
-            resources:
-              description: The resources applied by the operator
+            conditions:
+              description: The latest available observations of a resource's current
+                state. +patchMergeKey=type +patchStrategy=merge
               items:
+                properties:
+                  lastTransitionTime:
+                    description: LastTransitionTime is the last time the condition
+                      transitioned from one status to another. We use VolatileTime
+                      in place of metav1.Time to exclude this from creating equality.Semantic
+                      differences (all other things held constant).
+                    type: string
+                  message:
+                    description: A human readable message indicating details about
+                      the transition.
+                    type: string
+                  reason:
+                    description: The reason for the condition's last transition.
+                    type: string
+                  severity:
+                    description: Severity with which to treat failures of this type
+                      of condition. When this is not specified, it defaults to Error.
+                    type: string
+                  status:
+                    description: Status of the condition, one of True, False, Unknown.
+                      +required
+                    type: string
+                  type:
+                    description: Type of condition. +required
+                    type: string
+                required:
+                - type
+                - status
                 type: object
               type: array
             version:
               description: The version of the installed release
               type: string
-          required:
-          - resources
-          - version
           type: object
   version: v1alpha1
   versions:
